# tempmim

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  README.md  TODO_FOR_OPENCODE.md  menu_config.py  progress.md  pyproject.toml
!old_trash/: REPORT.md  REPORT_FINAL.md  REPORT_HONEST.md  REPORT_INVERSE_VOL_EXPERIMENT.md  REPORT_STRESS_TEST.md  REPORT_VOL_TARGETING.md  REPORT_WFO_V3.md  alpha_research_4h.py  analysis_cointegration.py  app.py  audit_data.py  cointegration_results.csv  cointegration_results_oos.csv  download_binance.py  download_binance_4h.py  exchanges.py  freespace.py  matcher.py  momentum_deepdive.py  stress_test.py  stress_test_v2.py  test_derivatives.py  test_history_depth.py  wfo_ml_backtester.py
alpha_research/: GOAL_REPORT.md  GOAL_STRATEGY_REPORT.md  README.md  basis_realistic.py  basis_research.py  basis_walkforward.py  signal_search_v2.py  signal_search_v4.py  strategies.json  strategies_all.py  strategies_basis.py  strategies_cost_check.py  strategies_lgbm_optuna.py  strategies_nf_nhits.py  strategies_xgb_variations.py  strategies_xgboost.py  volatility_regime_v2.py  volatility_regime_v3.py
alpha_research/archive/: signal_search.py  signal_search_v3.py  volatility_regime.py
data_fetcher/: README.md  __init__.py  __main__.py  audit.py  benchmark.py  config.py  contracts.py  download.py  fetcher.py  menu.py
data_fetcher/binance_api/: fetch_symbols.py  klines.py  tail.py
symbols/: fetch_metadata.json  perpetual_usdt_symbols.json  spot_perpetual_common_usdt.json  spot_usdt_symbols.json
webui/: __init__.py  __main__.py  app.py
(+13 files in other folders)
