[project]
name = "cross-exchange-finder"
version = "0.1.0"
description = "Поиск криптоинструментов на Binance, Bybit и OKX"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.0",
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "duckdb>=1.0.0",
    "huggingface-hub>=1.21.0",
    "statsmodels>=0.14.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0.0",
    "optuna>=4.0.0",
    "neuralforecast>=1.6.0",
]

[tool.setuptools.packages.find]
include = ["data_fetcher*", "webui*"]
